# reason-colbert

./: .gitignore  METHODOLOGY.md  README.md  TODO.md  modal_app.py  modal_app_l40s.py  pipeline_kd.py  pipeline_reasonir.py  pyproject.toml  test_modal.py  test_model.py
