[project]
name = "reason-colbert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "modal>=1.3.5",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.4",
    "optimum[onnxruntime]>=2.1.0",
    "pylate>=1.4.0",
    "pytest>=9.0.2",
    "tiktoken>=0.12.0",
]
